vision mobile responsive

--- a/css/vision.css
+++ b/css/vision.css
@@ -144,7 +144,7 @@
     .story-desc p, .leadership-desc p {
         margin-top: 6%;
         margin-left: 5%;
-        font-size: 2.8vw;
+        font-size: 0.8rem;
    }
    
    .leadership-desc {
