--- a/css/index.css
+++ b/css/index.css
@@ -11,44 +11,59 @@
      opacity: 0;
      transition: opacity 0.8s ease-in-out;
 }
- .welcome {
-     width: 70rem;
-     height: 23rem;
-     position: relative;
-     display: flex;
-     margin-top: 9rem;
-     margin-left: 5rem;
+.welcome {
+    width: 70%;
+    max-width: 70rem;
+    height: 23rem;
+    position: relative;
+    display: flex;
+    margin-top: 9rem;
+    margin-left: 5%;
 }
- .welcome div {
-     width: 70rem;
-     height: 23rem;
-     position: absolute;
-     background-color: #fafafa;
-     background-size: cover;
+
+.welcome img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
 }
- .about {
-     top: 4.5rem;
-     left: 40rem;
+
+.welcome div {
+    width: 95%;
+    height: 100%;
+    position: absolute;
+    background-color: #fafafa;
+    background-size: cover;
 }
- .about h2 {
-     font-weight: bold;
-     color: #3f4349;
-     font-family: "Poppins";
-     font-size: 3.75rem;
-     text-align: left;
-     margin-top: 5.8rem;
-     margin-left: 15.625rem;
+
+.about {
+    top: 5rem;
+    left: 55%; 
 }
- .about p {
-     color: #81858b;
-     font-family: "Open Sans";
-     font-size: 1rem;
-     text-align: left;
-     margin-left: 15.625rem;
-     margin-right: 16rem;
-     text-align: justify;
-     line-height: 2.1rem;
+
+.about h2 {
+    font-weight: bold;
+    color: #3f4349;
+    font-family: "Poppins";
+    font-size: 3rem;
+    font-weight: bolder;
+    text-align: left;
+    margin-top: 4.5rem;
+    margin-left: 25%; 
 }
+
+.about p {
+    color: #81858b;
+    font-family: "Open Sans";
+    font-size: 1rem;
+    text-align: left;
+    margin-left: 25%;
+    margin-right: 20%; 
+    text-align: justify;
+    line-height: 2.1rem;
+}
+
  .short-desc {
      margin-top: 23rem;
      font-size: 3.5rem;
@@ -219,6 +234,8 @@
      .welcome {
          width: 100%;
          height: 100%;
+         width: 100%;
+         height: 100%;
          margin-top: 5.2rem;
          margin-left: 0;
          margin-right: 0;
@@ -228,9 +245,22 @@
          justify-content: center;
          align-items: center;
     }
+
+
+    .welcome img {
+        width: 100%;
+        height: 100%;
+        margin-top: 0rem;
+        height: 22rem;
+        object-fit: cover;
+        position: relative;
+        z-index: -1;
+    }
+    
      .welcome div {
          width: 90%;
     }
+
      .about {
          width: 100%;
          height: 100%;
