--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@
 
 .welcome div {
     width: 95%;
-    height: 100%;
+    height: 105%;
     position: absolute;
     background-color: #fafafa;
     background-size: cover;
@@ -92,8 +92,7 @@
 }
  .team{
      background-color:#141416;
-     margin-left: 2.5rem;
-     margin-right: 2.5rem;
+     margin: auto;
 }
  .team .content h2 {
      color: white;
@@ -133,7 +132,9 @@
      color: white;
      width: 14%;
      height: 9%;
-}
+     position: absolute;
+    }
+
  .text-block-1 {
      position: absolute;
      margin-left: 6rem;
@@ -227,13 +228,12 @@
  .text-block-5:hover, .text-cards img:hover, .text-block-6:hover, .text-block-7:hover {
      transform: scale(1.1);
 }
+
  @media screen and (max-width: 1000px) {
      body {
          background: linear-gradient( to bottom, #1a1a1c 0%, #1a1a1c 25%, #141416 25%, #141416 100% );
     }
-     .welcome {
-         width: 100%;
-         height: 100%;
+     .welcome { 
          width: 100%;
          height: 100%;
          margin-top: 5.2rem;
