--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,7 @@
      position: absolute;
      background-attachment: unset;
      transition: transform 0.3s ease-in-out;
+     z-index: -1;
 }
  .background-img-inner {
      padding-top: 10%;
@@ -93,6 +94,7 @@
  .team{
      background-color:#141416;
      margin: auto;
+     z-index: 3;
 }
  .team .content h2 {
      color: white;
@@ -109,7 +111,7 @@
      font-weight: bolder;
 }
  .team .content {
-     margin-left: 30rem;
+     margin-left: 25%
 }
  .cards {
      display: flex;
@@ -117,6 +119,7 @@
      justify-content: center;
      background-color: #1a1a1c;
      padding: 3rem;
+     margin: 0 3rem;
 }
  .column{
      display: grid;
@@ -177,22 +180,27 @@
      font-family: "Poppins";
      line-height: 1;
 }
- .text-cards {
-     display: grid;
-     grid-template-columns: repeat(6, 1fr);
-     column-gap: 1rem;
-     margin-left: 29rem;
-     margin-right: 29rem;
-     margin-top: 3rem;
-}
+
+.text-cards {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 1rem;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateX(8%);
+    width: 100%;
+    max-width: 1100px;
+  }
+
  .text-cards img {
-     width: 180px;
-     height: 200px;
+    width: 11rem;
+    height: 12.5rem;
      object-fit: cover;
 }
  .text-block-5, .text-block-6, .text-block-7 {
-     width: 180px;
-     height: 200px;
+     width: 11rem;
+     height: 12.5rem;
 }
  .text-block-5 {
      background-color: #83b7ee;
@@ -216,9 +224,10 @@
      color: #898989;
      font-size: 1rem;
      font-family: "Open Sans";
-     margin-left: 29rem;
+     margin-left: 25.5%;
      margin-top: 1rem;
 }
+
  .text-block-5, .text-cards img, .text-block-6, .text-block-7 {
      transition: transform 0.3s ease;
      user-select: none;
@@ -229,7 +238,7 @@
      transform: scale(1.1);
 }
 
-@media screen and (max-width: 1450px) {
+@media screen and (max-width: 1500px) {
 
     body {
         background: linear-gradient( to bottom, #1a1a1c 0%, #1a1a1c 30%, #141416 30%, #141416 100% );
@@ -270,6 +279,31 @@
         position: absolute;
         margin-top: 44rem;
         margin-left: 24.5rem;
+   }
+}
+
+@media screen and (max-width: 1100px) {
+    .text-cards {
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 0rem;
+        margin-right: 0rem;
+        transform: none;
+   }
+    .text-cards img {
+        width: 100%;
+        height: 18rem;
+        margin-bottom: 1rem;
+   }
+    .text-block-5, .text-block-6, .text-block-7 {
+        width: 100%;
+        height: 5rem;
+        margin-bottom: 1rem;
+   }
+    .text-block-5 p, .text-block-6 p, .text-block-7 p {
+        margin-top: 0.7rem;
+   }
+    .read-more {
+        margin-left: 2vw;
    }
 }
 
@@ -346,30 +380,9 @@
      .our-directions {
          font-size: 1.8rem;
     }
-     .text-cards {
-         grid-template-columns: repeat(1, 1fr);
-         margin-left: 0rem;
-         margin-right: 0rem;
-    }
-     .text-cards img {
-         width: 100%;
-         height: 18rem;
-         margin-bottom: 1rem;
-    }
-     .text-block-5, .text-block-6, .text-block-7 {
-         width: 100%;
-         height: 5rem;
-         margin-bottom: 1rem;
-    }
-     .text-block-5 p, .text-block-6 p, .text-block-7 p {
-         margin-top: 0.7rem;
-    }
-     .read-more {
-         margin-left: 2vw;
-    }
 }
 
- @media screen and (max-width: 750px) {
+ @media screen and (max-width: 850px) {
      .column{
          grid-template-columns: repeat(1, 1fr);
     }
