--- a/css/solutions.css
+++ b/css/solutions.css
@@ -112,14 +112,19 @@
 }
 
 @media screen and (max-width: 1000px) {
+
+    .business {
+        max-height: 55vh;
+    }
+    
     .business h2 {
-        margin-top: 4rem;
-        margin-left: 2rem;
-        font-size: 3rem;
+        margin-top: 10rem;
+        margin-left: 0rem;
+        font-size: 2.5rem;
     }
     .business p {
         font-size: 1.5rem;
-        margin-top: -2rem;
+        margin-top: -8rem;
     }
 
     table, td, tr {
