--- a/css/footer.css
+++ b/css/footer.css
@@ -52,6 +52,18 @@ footer {
   flex-direction: column;
   align-items: flex-start;
 }
+
+.footer-button {
+  transition: all 0.4s ease-in-out;
+}
+
+.footer-button:hover{
+  color: #729fce;
+  transform: inherit;
+  opacity: 1;
+  text-decoration: none;
+}
+
 .href-buttons a {
   margin-bottom: 1rem;
   text-decoration: none;
