--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@200&display=swap');
+ 
  body {
      margin: 0;
      font-family: "Barlow";
@@ -71,7 +72,7 @@
      font-family: "Poppins";
 }
  .background-img {
-     background: url("../img/background.jpeg") fixed 100%;
+     background: url("../img/b1.png") fixed 100%;
      background-repeat: no-repeat;
      background-position: center center;
      width: 100%;
